--- a/css/index.css
+++ b/css/index.css
@@ -179,4 +179,29 @@ footer nav a {
 nav{
     display:flex;
     justify-content: space-between;
+    align-items: center;
+}
+nav a{
+    color:black;
+    text-decoration: none;
+}
+.container>img{
+    padding-bottom:1em;
+}
+.text-container{
+    font-weight: bold;
+}
+
+.boxes{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+.boxes div{
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:1.5em;
 }
