--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,7 @@ nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
+    margin:1em;
 }
 nav a{
     color:black;
